# cuteFPGA

./: CMakeLists.txt  README.md  data.qrc  fancybutton.ui  installer.cpp  installer.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  programmer.h  programmer.ui  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  spinnerdialog.h  spinnerdialog.ui  spinnertask.cpp  synthesis.cpp  synthesis.h  synthesis.ui  utils.cpp  utils.h  warndialog.cpp  warndialog.h  warndialog.ui
.github/workflows/: linux-build.yml  windows-build.yml
config/: programmers.json  support.json
src/: downloader.cpp  downloader.h  fancybutton.cpp  fancybutton.h  fancybutton.ui  installer.cpp  installer.h  mainwindow.cpp  programmer.cpp  programmer.h  programmer.ui  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  spinnerdialog.cpp  spinnertask.h  spinnertask.ui  synthesis.cpp  synthesis.h  utils.cpp
src/config/: chips.json
src/scripts/: webfpga.py
